k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taqwanet-service
  labels:
    app: taqwanet
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: taqwanet
  sessionAffinity: ClientIP
