k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taqwanet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - taqwanet.com
      secretName: tls-secret
  rules:
    - host: taqwanet.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: taqwanet-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taqwanet-service
                port:
                  number: 80
